Simplify AI assistant: delete custom exceptions, rewrite controller and service
Delete AiAssistantException and AiAssistantErrorResponse. Replace with Spring's
ResponseStatusException. Controller returns AiAssistantResponse directly (no
ResponseEntity, no try-catch). Service reduced from 255 to ~100 lines: no retry
logic, no JSON fence-stripping, no granular error mapping, no duplicate-answer
validation. Response shape changed to { question, answers[], correctAnswers[] }
to match the Question model.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>